--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@hypernym/nuxt-anime": "^2.1.1",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.13.0",
     "@nuxt/scripts": "0.11.8",
     "@nuxt/ui": "^3.1.3",
     "@unhead/vue": "^2.0.3",
+    "animejs": "^4.0.2",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
     "typescript": "^5.6.3",
