--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "1.13.0",
     "@nuxt/scripts": "0.11.8",
     "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@unhead/vue": "^2.0.3",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
@@ -25,7 +26,6 @@
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "nuxt-lucide-icons": "^1.0.5"
   }
 }
