--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@unhead/vue": "^2.0.3",
     "eslint": "^9.0.0",
+    "next-auth": "4.21.1",
     "nuxt": "^3.17.5",
+    "simple-icons": "^15.2.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@sidebase/nuxt-auth": "^0.10.1",
     "nuxt-lucide-icons": "^1.0.5"
   }
 }
