--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "websocket": "node start-websocket.js",
+    "test-chat": "node test-websocket.js"
   },
   "dependencies": {
     "@hypernym/nuxt-anime": "^2.1.1",
@@ -18,6 +20,7 @@
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@unhead/vue": "^2.0.3",
+    "dotenv": "^17.0.1",
     "eslint": "^9.0.0",
     "next-auth": "4.21.1",
     "nuxt": "^3.17.5",
